--- a/portfolio/src/Landing/Projects/ImgCard/index.css
+++ b/portfolio/src/Landing/Projects/ImgCard/index.css
@@ -65,7 +65,6 @@
 }
 
 .cta > a {
-  text-decoration: none;
   color: var(--orange-shade);
   font-weight: 500;
   font-style: italic;
