--- a/portfolio/src/component/NavBar/index.css
+++ b/portfolio/src/component/NavBar/index.css
@@ -18,7 +18,7 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  margin: 10px 0;
+  margin: 10px;
 }
 
 .navbar-container li {
